# pixelize

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: config.rs  main.rs
libcrate/: Cargo.toml
libcrate/src/: lib.rs
