[package]
name = "pixelize"
version = "0.1.0"
edition = "2024"
authors = ["srama"]
description = "Converts images to pixel art (kinda...)"
license = "MIT"
repository = "https://github.com/sramekj/pixelize"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
libcrate = { path = "../libcrate" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
