[package]
name = "libcrate"
version = "0.1.0"
edition = "2024"
authors = ["srama"]
description = "Converts images to pixel art (kinda...)"
license = "MIT"
repository = "https://github.com/sramekj/pixelize"

[dependencies]
anyhow = "1.0.100"
color_quant = "1.1.0"
image = "0.25.8"
kiddo = "5.2.2"
rayon = "1.11.0"
